# elevate-code

./: Cargo.toml  LICENSE  README.md
crates/elevate-code/: Cargo.toml
crates/elevate-code-derive/: Cargo.toml
crates/elevate-code-derive/src/: lib.rs
crates/elevate-code/src/: channel.rs  lib.rs  privilege.rs  process.rs  util.rs
crates/elevated/: Cargo.toml
crates/elevated-derive/: Cargo.toml
crates/elevated-derive/src/: lib.rs
crates/elevated/src/: channel.rs  lib.rs  privilege.rs  process.rs  task.rs  token.rs  util.rs
examples/elevate-example/: Cargo.toml
examples/elevate-example/src/: main.rs
