[package]
name = "elevate-code"
version = "0.1.0"
edition = "2021"
description = "将标记的函数自动以管理员权限运行。"
repository = "https://github.com/hamflx/elevate-code"
license = "MIT"
authors = ["hamflx <a@hamflx.cn>"]
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.2.5"
elevate-code-derive = { version = "0.1.0", path = "../elevate-code-derive" }
windows = { version = "0.51.1", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_WindowsProgramming", "Win32_System_Console"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
