[package]
name = "elevated-derive"
version = "0.1.0"
edition = "2021"
description = "将标记的函数自动以管理员权限运行。"
repository = "https://github.com/hamflx/elevated"
license = "MIT"
authors = ["hamflx <a@hamflx.cn>"]
readme = "../../README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }
