[package]
name = "elevated"
version = "0.1.3"
edition = "2021"
description = "将标记的函数自动以管理员权限运行。"
repository = "https://github.com/hamflx/elevated"
license = "MIT"
authors = ["hamflx <a@hamflx.cn>"]
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elevated-derive = { version = "0.1.0", path = "../elevated-derive" }
ntapi = { version = "0.4.1", features = ["impl-default"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dependencies.windows]
version = "0.52.0"
features = [
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_WindowsProgramming",
  "Win32_System_Console",
  "Win32_Networking",
  "Win32_Networking_WinSock",
  "Win32_System_Environment",
  "Win32_Storage_FileSystem",
  "Win32_System_Pipes",
  "Win32_System_IO"
]

[dependencies.winapi]
features = ["std"]
version = "0.3.9"
